change download button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="main__div--center"></div>
                 <div class="main__tittle main__blackBottom">BOTTOM TEXT</div>
             </div>
-            <button class="main__button" id="download-meme"><i class="fa-solid fa-download"></i>descargar meme</button>
+            <button class="main__button" id="download-meme"><i class="fa-solid fa-download"></i> Descargar meme</button>
         </section>
     </main>  
     <aside>
